# frontier-ocr

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
deployment/systemd/: frontier-ocr.service
docs/: API_USAGE_GUIDE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md
frontier_ocr/: __main__.py  cli.py  main.py
frontier_ocr/api/: ocr_routes.py
frontier_ocr/core/: config.py
frontier_ocr/models/: ocr_models.py
frontier_ocr/services/: __init__.py  backend_registry.py  paddleocr_vl_service.py
frontier_ocr/utils/: file_validation.py  pdf_utils.py  temp_storage.py  text_utils.py
tests/: test_api_backend_selection.py  test_backend_registry.py  test_config.py  test_paddle_lifecycle.py
